--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ------------------------------------------------------------------------
+0.0101  2013-05-23      Piotr Roszatycki <dexter@cpan.org>
+
+*
+
+------------------------------------------------------------------------
 0.01    2012-08-14      Piotr Roszatycki <dexter@cpan.org>
 
 * First CPAN release.
