--- a/README
+++ b/README
@@ -14,13 +14,13 @@ SYNOPSIS
       };
 
       # From shell
-      plackup -s Twiggy -E Proxy -e 'enable q{AccessLog}' app.psgi
+      plackup -s Starlet -E Proxy -e 'enable q{AccessLog}' app.psgi
 
       # or
-      plackup -s Twiggy -E Proxy -MPlack::App::Proxy \
+      plackup -s Starlet -E Proxy -MPlack::App::Proxy \
               -e 'enable q{AccessLog}; enable q{Proxy::Connect}; \
                   enable q{Proxy::AddVia}; enable q{Proxy::Requests}; \
-                  Plack::App::Proxy->new_to_app'
+                  Plack::App::Proxy->new->to_app'
 
 DESCRIPTION
     This module handles HTTP requests as a forward proxy server.
@@ -36,11 +36,12 @@ DESCRIPTION
     needed.
 
     In some cases the default server Plack::Server::PSGI alias `Standalone'
-    can hang up. It is better to run proxy server with Starlet or Twiggy.
+    can hang up. It is better to run proxy server with Starlet, Starman or
+    Twiggy.
 
 SEE ALSO
     Plack, Plack::App::Proxy, Plack::Middleware::Proxy::Connect,
-    Plack::Middleware::Proxy::AddVia, Starlet, Twiggy.
+    Plack::Middleware::Proxy::AddVia, Starlet, Starman, Twiggy.
 
 BUGS
     If you find the bug or want to implement new features, please report it
@@ -53,7 +54,7 @@ AUTHOR
     Piotr Roszatycki <dexter@cpan.org>
 
 LICENSE
-    Copyright (c) 2012 Piotr Roszatycki <dexter@cpan.org>.
+    Copyright (c) 2012-2013 Piotr Roszatycki <dexter@cpan.org>.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as perl itself.
